<resources>
    <string name="app_name">Temperature Conversion</string>
    <string name="convert">Convert</string>
    <string name="prompt1">Type in temperature here</string>
    <string name="celsius">Celsius</string>
    <string name="temperature">Temperature</string>
    <string name="history">History</string>
    <string name="tempHistoryText">Here will be your history</string>
</resources>
